안쓰는 이미지 삭제

--- a/app/src/main/res/layout/list_notice.xml
+++ b/app/src/main/res/layout/list_notice.xml
@@ -23,8 +23,7 @@
         android:layout_alignParentTop="true"
         android:layout_marginStart="13dp"
         android:layout_marginTop="17dp"
-        android:layout_toEndOf="@+id/textView2"
-        app:srcCompat="@drawable/profile" />
+        android:layout_toEndOf="@+id/textView2" />
 
     <TextView
         android:id="@+id/noticeTextView"
