--- a/app/src/main/res/layout/fragment_match.xml
+++ b/app/src/main/res/layout/fragment_match.xml
@@ -7,9 +7,9 @@
 
     <ImageView
         android:layout_width="match_parent"
-        android:layout_height="120dp"
+        android:layout_height="185dp"
         android:scaleType="fitXY"
-        android:src="@drawable/mypagebackground"/>
+        android:src="@drawable/match_back"/>
 
 
     <LinearLayout
